--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ li {
     background-color: rgb(37, 75, 156);
     color: white;
     flex-direction: column;
-    margin: 20px;
+    margin: 10px;
     border: 1px solid rgb(80, 28, 89);
     border-radius: 10px;
 }
@@ -86,5 +86,10 @@ li {
 #descript {
     font-size: 1.7em;
     font-family: 'Pacifico', cursive;
+}
+
+#showingMovie li {
+    color: blue;
+    cursor: pointer;
 }
 
