--- a/style.css
+++ b/style.css
@@ -70,8 +70,14 @@ li {
 }
 
 .bg-danger {
+    background: red;
+    color: white;
+}
+
+.btn-danger {
     background-color: red;
     color: white;
+    font-size: 10px;
 }
 
 #poster {
